--- a/src/index.scss
+++ b/src/index.scss
@@ -33,6 +33,62 @@ body {
 
   #mainResume {
     grid-area: resume;
+    display: grid;
+    grid-template-rows: minmax(0, 1fr);
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+
+    #mainLeft {
+      display: grid;
+      grid-template-rows: minmax(0, 1fr);
+      grid-template-columns: minmax(0, 1fr) minmax(0, 0.5fr);
+      padding: 20px;
+
+      #hero {
+        display: grid;
+        justify-items: center;
+        font-size: 30px;
+        height: 100%;
+
+        #heroIconTemp {
+          display: flex;
+          align-items: center;
+          min-height: 0;
+
+          #heroIcon {
+            background-color: gray;
+            max-height: 100%;
+            width: auto;
+          }
+
+          #heroTemp {
+            font-size: 60px;
+            font-weight: bold;
+          }
+        }
+      }
+
+      #details {
+        display: grid;
+        grid-template-rows: minmax(0, 1fr);
+        padding: 20px 0;
+
+        #detailsList {
+          list-style: none;
+          display: flex;
+          flex-direction: column;
+          justify-content: space-between;
+
+          li {
+            display: flex;
+            align-items: center;
+
+            img {
+              width: 50px;
+            }
+          }
+        }
+      }
+    }
   }
 
   #weekData {
