--- a/src/index.scss
+++ b/src/index.scss
@@ -59,7 +59,6 @@ body {
           min-height: 0;
 
           #heroIcon {
-            background-color: gray;
             max-height: 100%;
             width: auto;
           }
@@ -126,6 +125,31 @@ body {
 
   #weekData {
     grid-area: week;
+    margin: 15px 20px;
+    display: grid;
+    grid-template-rows: minmax(0, 1fr);
+
+    #dailyList {
+      @extend %lists;
+      min-height: 0;
+      display: flex;
+      justify-content: space-between;
+      align-content: stretch;
+      align-items: center;
+
+      li {
+        min-height: 0;
+        height: 100%;
+
+        div {
+          height: 100%;
+          width: 160px;
+          display: grid;
+          justify-content: center;
+          padding: 5px 10px;
+        }
+      }
+    }
   }
 
   #mainFooter {
