--- a/src/index.scss
+++ b/src/index.scss
@@ -33,6 +33,14 @@ body {
     display: flex;
     align-items: center;
     margin-left: 20px;
+    gap: 10px;
+
+    #setUnits {
+      ul {
+        @extend %lists;
+        display: flex;
+      }
+    }
   }
 
   #mainResume {
