--- a/src/index.scss
+++ b/src/index.scss
@@ -92,6 +92,16 @@ body {
           li {
             display: flex;
             align-items: center;
+            gap: 8px;
+
+            :nth-child(2) {
+              flex: 1;
+            }
+
+            span:last-child {
+              flex: 0.8;
+              text-align: center;
+            }
 
             img {
               width: 50px;
