Add footer links

--- a/src/index.scss
+++ b/src/index.scss
@@ -219,6 +219,9 @@ body {
 
   #mainFooter {
     grid-area: footer;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
   }
 
 }
