--- a/src/index.scss
+++ b/src/index.scss
@@ -123,6 +123,18 @@ body {
         position: sticky;
       }
 
+      #mainRightHeader {
+        display: flex;
+
+        >div {
+          margin-left: 130px;
+          display: flex;
+          gap: 100px;
+          align-items: end;
+          font-size: 16px;
+        }
+      }
+
       #hourlyList {
         @extend %lists;
         overflow-y: auto;
@@ -197,7 +209,7 @@ body {
             align-items: center;
           }
 
-          p:nth-child(1n+4){
+          p:nth-child(1n+4) {
             width: 100%;
             text-align-last: justify;
           }
