Update general style

--- a/src/components/resultList/resultList.scss
+++ b/src/components/resultList/resultList.scss
@@ -1,10 +1,23 @@
 .results {
   position: absolute;
-  top: 30px;
-  width: 180px;
+  top: 32px;
+  width: 240px;
+  background-color: white;
+  border: none;
 
   ul {
     list-style: none;
+
+    li {
+      &:hover {
+        background-color: #ffac30ba;
+      }
+
+      input[type=radio] {
+        appearance: none;
+        -webkit-appearance: none;
+      }
+    }
   }
 }
 
