--- a/src/index.scss
+++ b/src/index.scss
@@ -1,6 +1,11 @@
 * {
   padding: 0;
   margin: 0;
+}
+
+*,
+*::before,
+*::after {
   box-sizing: border-box;
 }
 
@@ -12,7 +17,26 @@ body {
   width: 100vw;
   height: 100vh;
   display: flex;
-  background-color: gray;
+  background-color: #6e77a9;
+
+  ::-webkit-scrollbar {
+    width: 8px;
+  }
+
+  /* Track */
+  ::-webkit-scrollbar-track {
+    background: #474c6c;
+    opacity: 0;
+  }
+
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    /* background-color: inherit; */
+    border-color: #ff9800;
+    border-right-style: inset;
+    border-right-width: calc(100vw + 100vh);
+    border-radius: 4px;
+  }
 }
 
 #mainApp {
@@ -33,13 +57,16 @@ body {
     grid-area: header;
     display: flex;
     align-items: center;
-    margin-left: 20px;
+    padding-left: 20px;
     gap: 10px;
+    background-color: black;
 
     #setUnits {
       ul {
         @extend %lists;
         display: flex;
+        color: white;
+        font-weight: bold;
       }
     }
   }
@@ -48,13 +75,15 @@ body {
     grid-area: resume;
     display: grid;
     grid-template-rows: minmax(0, 1fr);
-    grid-template-columns: repeat(2, minmax(0, 1fr));
+    grid-template-columns: minmax(0, 0.8fr) minmax(0, 1fr);
+    border-bottom: 2px solid black;
 
     #mainLeft {
       display: grid;
       grid-template-rows: minmax(0, 1fr);
       grid-template-columns: minmax(0, 1fr) minmax(0, 0.5fr);
-      padding: 20px;
+      padding: 20px 0px;
+      border-right: 2px solid black;
 
       #hero {
         display: grid;
@@ -62,8 +91,13 @@ body {
         font-size: 30px;
         height: 100%;
 
+        #heroDt {
+          text-transform: capitalize;
+        }
+
         #heroDescription {
           text-transform: capitalize;
+          font-weight: bold;
         }
 
         #heroIconTemp {
@@ -86,7 +120,9 @@ body {
       #details {
         display: grid;
         grid-template-rows: minmax(0, 1fr);
-        padding: 20px 0;
+        padding: 20px 10px;
+        font-size: 24px;
+        font-weight: bold;
 
         #detailsList {
           @extend %lists;
@@ -118,6 +154,8 @@ body {
 
     #mainRight {
       display: grid;
+      padding-left: 20px;
+      padding-bottom: 2px;
 
       h2 {
         position: sticky;
@@ -234,6 +272,14 @@ body {
     display: flex;
     justify-content: space-around;
     align-items: center;
+    background-color: #3c3c3c;
+    color: white;
+
+    a {
+      text-decoration: none;
+      color: #ffc107;
+      font-weight: bold;
+    }
   }
 
 }
